--- a/style.css
+++ b/style.css
@@ -9,4 +9,39 @@ body {
   padding: 0;
 }
 
+
 /* Add styles here! */
+.intro-chunk {
+  max-width: 300px;
+}
+.max-width-wrapper {
+  margin: 100px;
+}
+
+.indented-heading {
+  width: fit-content;
+  padding: 1rem 2rem;
+  margin-left: -2rem;
+  margin-top: -.5rem; 
+  background: hsl(45deg, 100%, 50%);
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+}
+
+main {
+  background: hsl(0deg, 0%, 60%);
+  border-top: 8px solid hsl(0deg, 0%, 30%);
+  padding-bottom: 1rem;
+}
+
+.card {
+  padding: 1rem;
+  background: hsl(0deg, 0%, 100%);
+  border-bottom: 8px solid hsl(0deg, 0%, 30%);
+  margin-bottom: 2rem;
+  margin-left:-1rem;
+}
+
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
